# onnx

./: .bazelrc  .gitignore  WORKSPACE
onnx/: BUILD  BUILD.bazel  checker.cc  checker.h  onnx-operators.proto  onnx.proto  proto_utils.h  py_utils.h  string_utils.h
onnx/common/: array_ref.h  assertions.cc  assertions.h  common.h  constants.h  file_utils.h  graph_node_list.h  interned_strings.cc  interned_strings.h  ir.h  ir_pb_converter.cc  ir_pb_converter.h  model_helpers.cc  model_helpers.h  path.cc  path.h  platform_helpers.h  status.cc  status.h  stl_backports.h  tensor.h  version.h
onnx/defs/: attr_proto_util.cc  attr_proto_util.h  data_propagators.h  data_type_utils.cc  data_type_utils.h  function.cc  function.h  operator_sets.h  operator_sets_ml.h  operator_sets_preview.h  operator_sets_training.h  parser.cc  parser.h  printer.cc  printer.h  schema.cc  schema.h  shape_inference.cc  shape_inference.h  tensor_proto_util.cc  tensor_proto_util.h  tensor_util.cc  tensor_util.h
onnx/defs/controlflow/: defs.cc  old.cc  utils.cc  utils.h
onnx/defs/generator/: defs.cc  old.cc
onnx/defs/logical/: defs.cc  old.cc
onnx/defs/math/: defs.cc  old.cc  utils.cc  utils.h
onnx/defs/nn/: defs.cc  old.cc
onnx/defs/object_detection/: defs.cc  old.cc
onnx/defs/optional/: defs.cc  old.cc
onnx/defs/quantization/: defs.cc  old.cc
onnx/defs/reduction/: defs.cc  old.cc  utils.cc  utils.h
onnx/inliner/: inliner.cc  inliner.h
onnx/shape_inference/: implementation.cc  implementation.h
onnx/version_converter/: BaseConverter.h  convert.cc  convert.h  helper.cc  helper.h
(+47 files in other folders)
